fixed layout issues

--- a/Projects/Trade_Order_Matching_Engine/frontend/vite-project/src/App.css
+++ b/Projects/Trade_Order_Matching_Engine/frontend/vite-project/src/App.css
@@ -430,7 +430,7 @@ body {
     flex-direction: column;
     gap: 5px;
     margin-top: auto;
-    padding-top: 9px;
+    padding-top: 4px;
 }
 
 .of-balance-row {
